--- a/.htaccess
+++ b/.htaccess
@@ -1,11 +1,6 @@
-DirectoryIndex index.php
- 
-    RewriteEngine on
- 
-    RewriteCond $1 !^(index\.php|images|stylesheets|system/application/sources/)
- 
+<IfModule mod_rewrite.c>
+    RewriteEngine On
     RewriteCond %{REQUEST_FILENAME} !-f
- 
     RewriteCond %{REQUEST_FILENAME} !-d
- 
-    RewriteRule ^(.*)$ ./index.php/$1 [L,QSA]
+    RewriteRule ^(.*)$ index.php?/$1 [L]
+</IfModule>
